fix(DatePicker): Title spacing when month === August (#5027)

--- a/src/stylus/components/_date-picker-title.styl
+++ b/src/stylus/components/_date-picker-title.styl
@@ -26,6 +26,8 @@ rtl(v-date-picker-title-rtl, "v-date-picker-title")
     font-weight: 500
     position: relative
     overflow: hidden
+    padding-bottom: 8px
+    margin-bottom: -8px
 
     > div
       position: relative
